crates/uitest/fixtures/parser/const_.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/const_.fe
---
error[1-0001]: missing type bound for const definition
  ┌─ const_.fe:1:8
  │
1 │ const X = 10
  │        ^ expected `:`

error[1-0001]: expected `=`
  ┌─ const_.fe:3:13
  │
3 │ const X: i32 
  │             ^ expected `=`

error[1-0001]: expected type
  ┌─ const_.fe:5:9
  │
5 │ const X: ]@ = 1
  │         ^ expected type

error[1-0001]: unexpected syntax while parsing type
  ┌─ const_.fe:5:10
  │
5 │ const X: ]@ = 1
  │          ^^ unexpected


